Fix by calendar

--- a/src/Presentation/WebAdmin/Design/css/base-modules.css
+++ b/src/Presentation/WebAdmin/Design/css/base-modules.css
@@ -4223,6 +4223,11 @@ fieldset + fieldset
         text-shadow: none;
     }
 
+    .form-input.__calendar .dropdown-menu .btn:hover
+    {
+        background-color: #ecf7fc;
+    }
+
         .form-input.__calendar .dropdown-menu table .btn
         {
             width: 100%;
