--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Virto Commerce @ViewBag.Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Google fonts -->
