--- a/src/Presentation/WebAdmin/Design/css/project-modules.css
+++ b/src/Presentation/WebAdmin/Design/css/project-modules.css
@@ -284,3 +284,43 @@
     {
         left: 120px;
     }
+
+.dropdown-content .__customers .list-ico,
+.blade-t .blade-t_ico.__customers
+{
+    text-align: center;
+}
+
+.dropdown-content .__customers .list-ico i,
+.blade-t .blade-t_ico.__customers i
+{
+    bottom: 0;
+    font-style: normal;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.dropdown-content .__customers .list-ico i:after,
+.dropdown-content .__customers .list-ico i:before,
+.blade-t .blade-t_ico.__customers i:after,
+.blade-t .blade-t_ico.__customers i:before
+{
+    content: '';
+    font-size: 16px;
+    position: absolute;
+    top: 2px;
+}
+
+.dropdown-content .__customers .list-ico i:after,
+.blade-t .blade-t_ico.__customers i:after
+{
+    right: 0;
+}
+
+.dropdown-content .__customers .list-ico i:before,
+.blade-t .blade-t_ico.__customers i:before
+{
+    left: 0;
+}
