--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -1,3 +1,10 @@
+/* Fix by angular ng-animate */
+.ng-hide,
+.ng-hide-animate
+{
+    display: none;
+}
+
 /* Scroll bar */
 *::-webkit-scrollbar
 {
@@ -2425,13 +2432,13 @@ h3
     color: #e51400;
 }
 
-.form-input input.ng-invalid,
+.form-input input.error,
 .form-input textarea.ng-invalid,
-.form-input input:focus.ng-invalid,
-.form-input textarea:focus.ng-invalid
+.form-input input.error:focus,
+.form-input textarea.ng-invalid:focus
 {
-    background: #faf1f1;
-    border-color: #e51400;
+    background: #fef8f7;
+    border-color: #fce7e6;
     color: #e51400;
 }
 
@@ -2474,12 +2481,10 @@ fieldset + fieldset
 
     .form-group .form-error
     {
-        background: #fef8f7;
-        border: 1px solid #fce7e6;
         color: #e51400;
         font-size: 12px;
         line-height: 1.4;
-        padding: 10px;
+        padding: 5px 0;
     }
 
         .form-group .form-error *
@@ -2566,7 +2571,7 @@ fieldset + fieldset
 
         .form-input.__mini
         {
-            width: 60px;
+            width: 68px;
         }
 
         .form-input input,
@@ -5026,6 +5031,7 @@ tags-input .tags .tag-item .remove-button
                 position: absolute;
                 right: 0;
                 top: 0;
+                z-index: 100;
             }
 
 		.blade-head .blade-nav
