fixes in stores, customer and datepicker (test #1657)

--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -4341,6 +4341,10 @@ fieldset + fieldset
             padding: 0 10px;
         }
 
+.text-muted {
+    color: #999999;
+}
+
     .form-input.__calendar .dropdown-menu .btn-info,
     .form-input.__calendar .dropdown-menu .btn.active
     {
