google analytics, themes initialize

--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Views/Shared/_Layout.cshtml
@@ -15,8 +15,10 @@
 
     <meta name="viewport" content="width=device-width" />
     <base href="~/" />
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body class="metro" ng-controller="appCtrl">
+	@Html.Partial("_GoogleAnalyticsPartial")
     @RenderBody()
 
     @Scripts.Render("~/scripts/jquery")
