--- a/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -2343,6 +2343,14 @@ h3
 		text-shadow: 1px 1px #fff;
 	}
 
+    .table .table-head
+    {
+        background: #fbfdfe;
+        border-bottom: 1px solid #dee9f0;
+        font-size: 14px;
+        padding: 5px 20px;
+    }
+
     .table.__data .table-col
     {
         vertical-align: top;
@@ -2824,6 +2832,7 @@ fieldset + fieldset
         height: 12px;
         position: relative;
         top: -2px;
+        width: 12px;
     }
 
     .form-control
@@ -4146,11 +4155,16 @@ fieldset + fieldset
     top: 0;
 }
 
+.tree-node.__empty:after
+{
+    display: none;
+}
+
 .tree-node:before
 {
     background: #a1c0d4;
     content: '';
-    height: 10px;
+    height: 12px;
     left: 50%;
     position: absolute;
     top: -10px;
@@ -4800,7 +4814,6 @@ tags-input .tags .tag-item .remove-button
 	{
 		background: #383838;
 		bottom: 0;
-		left: -270px;
 		position: fixed;
 		top: 0;
 		width: 360px;
@@ -4808,11 +4821,15 @@ tags-input .tags .tag-item .remove-button
 
 		-webkit-box-shadow: 5px 0 0 rgba(0,0,0,.25);
 				box-shadow: 5px 0 0 rgba(0,0,0,.25);
+
+        -webkit-transform: translateX(-270px);
+                transform: translateX(-270px);
 	}
 
 	.nav-bar .dropdown.__opened
 	{
-		left: 90px;
+		-webkit-transform: translateX(90px);
+                transform: translateX(90px);
 	}
 
 		.dropdown .dropdown-close
