--- a/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -2473,8 +2473,11 @@ h3
     color: #e51400;
 }
 
-.ng-invalid,
-.ng-invalid:focus
+.form-input input.ng-invalid,
+.form-input textarea.ng-invalid,
+.ui-select-container.ng-invalid,
+.form-input input.ng-invalid:focus,
+.form-input textarea.ng-invalid:focus
 {
     background: #fef8f7;
     border-color: #fce7e6;
