Fix by validation ui-selects and fix by templates in orders (shipment, payment)

--- a/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -2475,7 +2475,7 @@ h3
 
 .form-input input.ng-invalid,
 .form-input textarea.ng-invalid,
-.ui-select-container.ng-invalid,
+.ui-select-container.ng-invalid .select2-choice,
 .form-input input.ng-invalid:focus,
 .form-input textarea.ng-invalid:focus
 {
