--- a/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -3210,6 +3210,15 @@ fieldset + fieldset
 			box-shadow: 0 0 0 2px #a1c0d4 inset;
 }
 
+.tile.__info:hover,
+.tile.__selected.__info
+{
+    cursor: default;
+
+    -webkit-box-shadow: none;
+            box-shadow: none;
+}
+
 .tile:after,
 .tile:before
 {
@@ -3430,12 +3439,6 @@ fieldset + fieldset
 	max-height: 100%;
 	max-width: 100%;
 	vertical-align: middle;
-}
-
-.tile.__gallery
-{
-	-webkit-box-shadow: none;
-			box-shadow: none;
 }
 
 .tile .tile-gallery
