Design and fixes

--- a/PLATFORM/Design/css/base-modules.css
+++ b/PLATFORM/Design/css/base-modules.css
@@ -2321,6 +2321,11 @@ h3
 	margin: 0 -20px 15px;
 }
 
+.form .table-wrapper
+{
+    margin: 0 -36px 15px -20px;
+}
+
 .table
 {
 	border-collapse: collapse;
@@ -2336,7 +2341,7 @@ h3
 
 	.table .table-col
 	{
-		border-bottom: 1px solid #dee9f0;
+        border-top: 1px solid #dee9f0;
 		font-size: 14px;
 		padding: 10px;
 		text-align: left;
@@ -2345,7 +2350,6 @@ h3
 
     .table .table-head
     {
-        background: #fbfdfe;
         border-bottom: 1px solid #dee9f0;
         font-size: 14px;
         padding: 5px 20px;
@@ -2474,10 +2478,11 @@ h3
     color: #e51400;
 }
 
-.form-input input.error,
-.form-input textarea.error,
-.form-input input.error:focus,
-.form-input textarea.error:focus
+.form-input input.ng-invalid,
+.form-input textarea.ng-invalid,
+.ui-select-container.ng-invalid .select2-choice,
+.form-input input.ng-invalid:focus,
+.form-input textarea.ng-invalid:focus
 {
     background: #fef8f7;
     border-color: #fce7e6;
@@ -2508,6 +2513,11 @@ fieldset + fieldset
 .form
 {
 	padding: 15px 0;
+}
+
+.form-group.__head
+{
+    border-bottom: 1px solid #dee9f0;
 }
 
 .form-group + .form-group
@@ -2640,6 +2650,13 @@ fieldset + fieldset
             min-width: 100%;
             padding-top: 8px;
             resize: none;
+        }
+
+        .form-input textarea.__large
+        {
+            height: 200px;
+            max-height: 200px;
+            min-height: 200px;
         }
 
         .form-input.__langs input,
@@ -2775,6 +2792,18 @@ fieldset + fieldset
                     font-size: 12px;
                     vertical-align: 2px;
                 }
+
+        .form-label + .form-nav
+        {
+            float: right;
+        }
+
+            .form-label + .form-nav *
+            {
+                display: inline-block;
+                font-size: 14px;
+                margin: 0 0 0 5px;
+            }
 
         .form-control .form-label
         {
@@ -3186,6 +3215,15 @@ fieldset + fieldset
 			box-shadow: 0 0 0 2px #a1c0d4 inset;
 }
 
+.tile.__info:hover,
+.tile.__selected.__info
+{
+    cursor: default;
+
+    -webkit-box-shadow: none;
+            box-shadow: none;
+}
+
 .tile:after,
 .tile:before
 {
@@ -3406,12 +3444,6 @@ fieldset + fieldset
 	max-height: 100%;
 	max-width: 100%;
 	vertical-align: middle;
-}
-
-.tile.__gallery
-{
-	-webkit-box-shadow: none;
-			box-shadow: none;
 }
 
 .tile .tile-gallery
@@ -4943,7 +4975,7 @@ tags-input .tags .tag-item .remove-button
 
         				.dropdown-content .list-ico
         				{
-        					font-size: 24px;
+        					font-size: 28px;
         					height: 24px;
         					margin: 0 20px 0 0;
                             position: relative;
@@ -5241,7 +5273,7 @@ tags-input .tags .tag-item .remove-button
 
 			.blade-t .blade-t_ico
 			{
-				font-size: 30px;
+				font-size: 28px;
 				height: 30px;
 				left: 0;
 				position: absolute;
@@ -5416,15 +5448,6 @@ tags-input .tags .tag-item .remove-button
         overflow: hidden;
 		position: relative;
 	}
-
-        .blade .blade-container .canceled
-        {
-            background: #43b0e6;
-            color: #fff;
-            font-size: 18px;
-            padding: 10px 0;
-            text-align: center;
-        }
 
 		.blade-container .blade-static
 		{
