--- a/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -2089,6 +2089,16 @@
 .flag.flag-zw {background-position: -176px -165px}
 
 
+.error
+{
+    color: #e51400;
+    display: block;
+    font-size: 12px;
+    line-height: 1.4;
+    padding: 5px 0;
+}
+
+
 
 /* Lists */
 ul,
@@ -2236,9 +2246,15 @@ ol
         color: #fff;
 		font-size: 13px;
 		padding: 5px 20px;
+        text-align: left;
         text-shadow: none;
         white-space: nowrap;
 	}
+
+    .menu.__context .menu-item.__right
+    {
+        padding: 5px 40px 5px 20px;
+    }
 
     .menu.__context .menu-item:hover
     {
@@ -2250,6 +2266,28 @@ ol
             font-size: 18px;
             width: 25px;
 		}
+
+        .menu.__context .menu-item.__right .menu-ico
+        {
+            position: absolute;
+            right: 20px;
+            width: 6px;
+        }
+
+        .menu.__context .menu.__sub
+        {
+            background: #333;
+            display: none;
+            left: 100%;
+            padding: 10px 0;
+            position: absolute;
+            top: 0;
+        }
+
+        .menu.__context .menu-item:hover .menu.__sub
+        {
+            display: block;
+        }
 
 
 /* Headings */
@@ -2299,6 +2337,14 @@ h3
 .text-mini
 {
 	font-size: 11px;
+}
+
+.note
+{
+    color: #e51400;
+    font-size: 12px;
+    font-style: italic;
+    margin: 0 0 15px;
 }
 
 .t,
@@ -2615,6 +2661,7 @@ fieldset + fieldset
 			color: #4c4c4c;
 			font-family: inherit;
 			font-size: 13px;
+            vertical-align: top;
 			width: 100%;
 
 			-webkit-box-sizing: border-box;
@@ -2643,10 +2690,10 @@ fieldset + fieldset
 
         .form-input textarea
         {
-            height: 100px;
-            max-height: 100px;
+            height: 110px;
+            max-height: 110px;
             max-width: 100%;
-            min-height: 100px;
+            min-height: 110px;
             min-width: 100%;
             padding-top: 8px;
             resize: none;
@@ -2654,9 +2701,9 @@ fieldset + fieldset
 
         .form-input textarea.__large
         {
-            height: 200px;
-            max-height: 200px;
-            min-height: 200px;
+            height: 220px;
+            max-height: 220px;
+            min-height: 220px;
         }
 
         .form-input.__langs input,
@@ -2807,7 +2854,7 @@ fieldset + fieldset
 
         .form-control .form-label
         {
-            margin: 0 0 0 10px;
+            
         }
 
 		.form-input .btn
@@ -2921,6 +2968,7 @@ fieldset + fieldset
 			font-size: 7px;
 			font-weight: normal;
 			left: 2px;
+            line-height: 1.3;
 			position: absolute;
 			top: 1px;
 		}
@@ -4284,6 +4332,18 @@ fieldset + fieldset
     margin-right: 0;
 }
 
+.column .column .form-group
+{
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.column .column + .column .form-group
+{
+    margin-left: 10px;
+    margin-right: 0;
+}
+
 .column + .column .table-wrapper
 {
     margin-left: 10px;
@@ -4980,7 +5040,7 @@ tags-input .tags .tag-item .remove-button
 
         				.dropdown-content .list-ico
         				{
-        					font-size: 28px;
+        					font-size: 25px;
         					height: 24px;
         					margin: 0 20px 0 0;
                             position: relative;
